--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,11 +25,18 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ env.RELEASE_REF }}
-      
-      - name: Create Release
-        uses: softprops/actions-gh-release@v1
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
         with:
-          draft: true
-          tag_name: ${{ env.RELEASE_REF }}
-          files: |
-            dist/chile-economic-indexes-cli_*
+          go-version: "1.22"
+        id: go
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v5
+        with:
+          distribution: goreleaser
+          version: "~> v1"
+          args: release --clean
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
