--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
 *.go linguist-language=Go
 
 # Ignore frontend assets and mark them as vendored
+*.html linguist-vendored
+*.css linguist-vendored
+*.js linguist-vendored
 *.zsh linguist-vendored
 *.bash linguist-vendored
